--- a/src/common/components/Alerts/Message/styles.module.scss
+++ b/src/common/components/Alerts/Message/styles.module.scss
@@ -9,23 +9,17 @@
 
     // width: 22rem;
     height: 3rem;
+}
 
-    animation: message-fadein 0.3s linear forwards;
+:global :local(.message) {
+    animation: fadeIn 0.3s linear both;
+}
 
-    &.disapear {
-        animation: message-fadeout 0.3s linear forwards;
+:global :local(.message.disapear) {
+    animation: fadeOut 0.3s linear both;
 
-        .content {
-            animation: hide-message-content 0.3s linear forwards;
-        }
-    }
-
-    &.apear {
-        animation: message-fadein 0.3s linear forwards;
-
-        .content {
-            animation: show-message-content 0.3s linear forwards;
-        }
+    :local .content {
+        animation: hide-message-content 0.3s linear both;
     }
 }
 
@@ -44,7 +38,7 @@
     justify-content: center;
     align-items: center;
 
-    animation: show-message-content 0.3s linear forwards;
+    animation: show-message-content 0.3s linear both;
 }
 
 .text {
@@ -55,26 +49,6 @@
     letter-spacing: 0.052rem;
     text-transform: uppercase;
     text-shadow: 0px 0.1rem 0.1rem rgba(0, 0, 0, 0.32);
-}
-
-@keyframes message-fadein {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
-}
-
-@keyframes message-fadeout {
-    from {
-        opacity: 1;
-    }
-
-    to {
-        opacity: 0;
-    }
 }
 
 @keyframes show-message-content {
