--- a/src/common/components/Alerts/MessageYouWin/styles.module.scss
+++ b/src/common/components/Alerts/MessageYouWin/styles.module.scss
@@ -9,15 +9,17 @@
 
     width: 20rem;
     height: 4.7rem;
+}
 
-    animation: message-fadein 0.4s linear forwards;
+:global :local(.you-win) {
+    animation: fadeIn 0.3s linear both;
+}
 
-    &.disapear {
-        animation: message-fadeout 0.4s linear forwards;
+:global :local(.you-win.disapear) {
+    animation: fadeOut 0.3s linear both;
 
-        .content {
-            animation: hide-message-content 0.3s linear forwards;
-        }
+    :local .content {
+        animation: hide-message-content 0.3s linear both;
     }
 }
 
@@ -39,7 +41,7 @@
     align-items: center;
     gap: 0.6rem;
 
-    animation: show-message-content 0.4s linear forwards;
+    animation: show-message-content 0.3s linear forwards;
 }
 
 .label {
@@ -55,26 +57,6 @@
     font-size: 1.9rem;
     font-weight: 700;
     letter-spacing: -0.038rem;
-}
-
-@keyframes message-fadein {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
-}
-
-@keyframes message-fadeout {
-    from {
-        opacity: 1;
-    }
-
-    to {
-        opacity: 0;
-    }
 }
 
 @keyframes show-message-content {
