--- a/src/common/components/Alerts/NewSet/Message/styles.module.scss
+++ b/src/common/components/Alerts/NewSet/Message/styles.module.scss
@@ -10,23 +10,17 @@
     // width: 22rem;
     width: 27.8rem;
     height: 2rem;
+}
 
-    animation: message-fadein 0.3s linear forwards;
+:global :local(.message) {
+    animation: fadeIn 0.3s linear forwards;
+}
 
-    &.disapear {
-        animation: message-fadeout 0.3s linear forwards;
+:global :local(.message.disapear) {
+    animation: fadeOut 0.3s linear forwards;
 
-        .content {
-            animation: hide-message-content 0.3s linear forwards;
-        }
-    }
-
-    &.apear {
-        animation: message-fadein 0.3s linear forwards;
-
-        .content {
-            animation: show-message-content 0.3s linear forwards;
-        }
+    :local .content {
+        animation: hide-message-content 0.3s linear forwards;
     }
 }
 
@@ -70,26 +64,6 @@
     letter-spacing: 0.01rem;
     text-transform: uppercase;
     text-shadow: 0px 0.1rem 0.1rem rgba(0, 0, 0, 0.32);
-}
-
-@keyframes message-fadein {
-    from {
-        opacity: 0;
-    }
-
-    to {
-        opacity: 1;
-    }
-}
-
-@keyframes message-fadeout {
-    from {
-        opacity: 1;
-    }
-
-    to {
-        opacity: 0;
-    }
 }
 
 @keyframes show-message-content {
