--- a/src/common/menus/Menu/styles.module.scss
+++ b/src/common/menus/Menu/styles.module.scss
@@ -9,37 +9,13 @@
     z-index: var(--layer-menu);
 
     animation-duration: 0.35s;
-    animation-fill-mode: forwards;
-
-    animation-name: panel-fadein;
-
-    &.closed {
-        animation-name: panel-fadeout;
-    }
+    animation-fill-mode: both;
 }
 
-@keyframes panel-fadein {
-    0% {
-        opacity: 0;
-        transform: scale(1, 1);
-    }
-    100% {
-        opacity: 1;
-        transform: scale(1, 1);
-    }
-}
+:global :local(.menu) {
+    animation-name: fadeIn;
 
-@keyframes panel-fadeout {
-    0% {
-        opacity: 1;
-        transform: scale(1, 1);
-    }
-    95% {
-        opacity: 0;
-        transform: scale(1, 1);
-    }
-    100% {
-        opacity: 0;
-        transform: scale(0, 0);
+    &:local(.closed) {
+        animation-name: fadeOut;
     }
 }
