--- a/src/common/menus/Panel/styles.module.scss
+++ b/src/common/menus/Panel/styles.module.scss
@@ -30,10 +30,14 @@
 
         box-shadow: 0 -0.4rem 1.2rem rgba(0, 0, 0, 0.3);
 
-        animation: menu-open-up 0.5s forwards;
+        &:global {
+            animation: slideInUp 0.5s both;
+        }
 
         &.disappear {
-            animation: menu-close-down 0.65s forwards;
+            :global {
+                animation: slideOutDown 0.5s both;
+            }
         }
     }
 }
@@ -50,10 +54,14 @@
 
             box-shadow: 0.4rem 0 1.2rem rgba(0, 0, 0, 0.3);
 
-            animation: menu-open-right 0.4s forwards;
+            &:global {
+                animation: slideInRight 0.5s both;
+            }
 
             &.disappear {
-                animation: menu-close-left 0.4s forwards;
+                :global {
+                    animation: slideOutLeft 0.5s both;
+                }
             }
         }
 
@@ -62,30 +70,16 @@
 
             box-shadow: -0.4rem 0 1.2rem rgba(0, 0, 0, 0.3);
 
-            animation: menu-open-left 0.4s forwards;
+            &:global {
+                animation: slideInLeft 0.5s both;
+            }
 
             &.disappear {
-                animation: menu-close-right 0.4s forwards;
+                :global {
+                    animation: slideOutRight 0.5s both;
+                }
             }
         }
-    }
-}
-
-@keyframes menu-open-up {
-    0% {
-        transform: translateY(50rem);
-    }
-    100% {
-        transform: translateY(0);
-    }
-}
-
-@keyframes menu-close-down {
-    0% {
-        transform: translateY(0);
-    }
-    100% {
-        transform: translateY(100rem);
     }
 }
 
