--- a/src/common/components/ResizeOverlay/styles.module.scss
+++ b/src/common/components/ResizeOverlay/styles.module.scss
@@ -6,16 +6,16 @@
     height: 100%;
     background-color: black;
     z-index: 100;
-    animation: overlay-animation 0.35s forwards;
+    animation: overlayAnimation 0.35s forwards;
 }
 
-@keyframes overlay-animation {
+@keyframes overlayAnimation {
     0% {
         opacity: 0;
     }
 
-    20%,
-    80% {
+    10%,
+    90% {
         opacity: 1;
     }
 
