--- a/src/common/components/Timer/TimerContent/styles.module.scss
+++ b/src/common/components/Timer/TimerContent/styles.module.scss
@@ -1,12 +1,18 @@
 .timer {
-    --scale: 1;
-
     position: absolute;
 
     width: 5.5rem;
     height: 5.5rem;
 
     overflow: visible;
+}
+
+:global :local(.timer) {
+    animation: zoomIn 0.3s both;
+
+    &:local(.disappear) {
+        animation: zoomOut 0.3s both;
+    }
 }
 
 .timer-text {
@@ -31,15 +37,7 @@
         top: var(--timer-portrait-top);
         left: var(--timer-portrait-left);
 
-        transform: translateX(var(--timer-portrait-trans-x))
-            translateY(var(--timer-portrait-trans-y)) scale(var(--scale));
-
-        animation: time-popup 0.35s linear forwards;
-    }
-
-    .disappear {
-        --scale: 0;
-        animation: time-hide 0.35s linear forwards;
+        translate: var(--timer-portrait-trans-x) var(--timer-portrait-trans-y);
     }
 }
 
@@ -49,68 +47,6 @@
         top: var(--timer-landscape-top);
         left: var(--timer-landscape-left);
 
-        transform: translateX(var(--timer-landscape-trans-x))
-            translateY(var(--timer-landscape-trans-y));
-
-        animation: time-popup-2 0.35s linear forwards;
-    }
-
-    .disappear {
-        animation: time-hide-2 0.35s linear forwards;
-    }
-}
-
-@keyframes time-popup {
-    0% {
-        transform-origin: center;
-        transform: translateX(var(--timer-portrait-trans-x))
-            translateY(var(--timer-portrait-trans-y)) scale(0);
-    }
-
-    100% {
-        transform-origin: center;
-        transform: translateX(var(--timer-portrait-trans-x))
-            translateY(var(--timer-portrait-trans-y)) scale(1);
-    }
-}
-
-@keyframes time-hide {
-    0% {
-        transform-origin: center;
-        transform: translateX(var(--timer-portrait-trans-x))
-            translateY(var(--timer-portrait-trans-y)) scale(1);
-    }
-
-    100% {
-        transform-origin: center;
-        transform: translateX(var(--timer-portrait-trans-x))
-            translateY(var(--timer-portrait-trans-y)) scale(0);
-    }
-}
-
-@keyframes time-popup-2 {
-    0% {
-        transform-origin: center;
-        transform: scale(0);
-    }
-
-    100% {
-        transform-origin: center;
-        transform: translateX(var(--timer-landscape-trans-x))
-            translateY(var(--timer-landscape-trans-y)) scale(1);
-    }
-}
-
-@keyframes time-hide-2 {
-    0% {
-        transform-origin: center;
-        transform: translateX(var(--timer-landscape-trans-x))
-            translateY(var(--timer-landscape-trans-y)) scale(1);
-    }
-
-    100% {
-        transform-origin: center;
-        transform: translateX(var(--timer-landscape-trans-x))
-            translateY(var(--timer-landscape-trans-y)) scale(0);
+        translate: var(--timer-landscape-trans-x) var(--timer-landscape-trans-y);
     }
 }
