--- a/src/styles/base/_animation.scss
+++ b/src/styles/base/_animation.scss
@@ -49,6 +49,16 @@
     }
 }
 
+@keyframes slideInDown {
+    0% {
+        transform: translate3d(0, -100%, 0);
+        visibility: visible;
+    }
+    to {
+        transform: translateZ(0);
+    }
+}
+
 @keyframes slideInLeft {
     0% {
         transform: translate3d(-100%, 0, 0);
@@ -66,6 +76,16 @@
     }
     to {
         transform: translateZ(0);
+    }
+}
+
+@keyframes slideOutUp {
+    0% {
+        transform: translateZ(0);
+    }
+    to {
+        visibility: hidden;
+        transform: translate3d(0, -100%, 0);
     }
 }
 
