optimized background color

--- a/src/common/components/MiniHowToPlay/Modal/styles.module.scss
+++ b/src/common/components/MiniHowToPlay/Modal/styles.module.scss
@@ -1,7 +1,7 @@
 .modal {
     position: relative;
     width: var(--width-modal-mini-htp);
-    background: rgba(0, 0, 0, 0.8);
+    background-color: rgba(0, 0, 0, 0.8);
     padding: 2.4rem 0.8rem 2rem;
     border-radius: 1.6rem;
 
