--- a/src/common/components/TopWinner/styles.module.scss
+++ b/src/common/components/TopWinner/styles.module.scss
@@ -4,7 +4,7 @@
     position: absolute;
     width: 100%;
     height: var(--top-winner-height);
-    background: rgba(15, 16, 29, 0.7);
+    background-color: rgba(15, 16, 29, 0.7);
     z-index: var(--layer-top-winner);
     pointer-events: none;
 
