--- a/src/common/menus/Items/HowToPlay/HowToPlayCard/styles.module.scss
+++ b/src/common/menus/Items/HowToPlay/HowToPlayCard/styles.module.scss
@@ -18,7 +18,7 @@
     }
 
     &.open {
-        background: #1e1f2e;
+        background-color: #1e1f2e;
         grid-template-rows: min-content 1fr;
     }
 }
