--- a/src/common/menus/Items/Transactions/Card/BettingTable/styles.module.scss
+++ b/src/common/menus/Items/Transactions/Card/BettingTable/styles.module.scss
@@ -30,7 +30,7 @@
     }
 
     tr.win {
-        background: rgba(59, 232, 0, 0.16);
+        background-color: rgba(59, 232, 0, 0.16);
     }
 
     td.shading {
