--- a/src/common/menus/Items/Transactions/Card/styles.module.scss
+++ b/src/common/menus/Items/Transactions/Card/styles.module.scss
@@ -20,7 +20,7 @@
     }
 
     &.expand {
-        background: #1e1f2e;
+        background-color: #1e1f2e;
         grid-template-rows: min-content 1fr;
     }
 }
