--- a/src/common/menus/Panel/SliderUp/styles.module.scss
+++ b/src/common/menus/Panel/SliderUp/styles.module.scss
@@ -12,6 +12,6 @@
         width: 3.2rem;
         height: 0.3rem;
         border-radius: 0.2rem;
-        background: #47485a;
+        background-color: #47485a;
     }
 }
