--- a/src/game/components/HowToPlayContent/Items/BetDescription/styles.module.scss
+++ b/src/game/components/HowToPlayContent/Items/BetDescription/styles.module.scss
@@ -13,7 +13,7 @@
 .bet-card {
     border-radius: 0.5rem;
     border: 0.1rem solid #414362;
-    background: #2f314a;
+    background-color: #2f314a;
     padding: 1rem 0.8rem;
 }
 
@@ -43,13 +43,13 @@
 
     thead tr {
         border: 0.1rem solid #414362;
-        background: #1d1f2e;
+        background-color: #1d1f2e;
         text-transform: uppercase;
     }
 
     tbody tr {
         border: 0.1rem solid #414362;
-        background: #272a3f;
+        background-color: #272a3f;
     }
 
     th,
