--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -17,15 +17,15 @@ html {
 }
 
 :not(.no-scrollbar)::-webkit-scrollbar-track {
-    background: #2e2f4b;
+    background-color: #2e2f4b;
 }
 
 :not(.no-scrollbar)::-webkit-scrollbar-thumb {
-    background: #41527e;
+    background-color: #41527e;
 }
 
 :not(.no-scrollbar)::-webkit-scrollbar-thumb:hover {
-    background: #ccc;
+    background-color: #ccc;
 }
 
 /* Hide scrollbar for Chrome, Safari and Opera */
