--- a/src/common/components/ChipDeck/_v1.scss
+++ b/src/common/components/ChipDeck/_v1.scss
@@ -34,7 +34,7 @@
                 );
 
                 border-radius: var(--button-action-size);
-                background: rgba(0, 0, 0, 0.32);
+                background-color: rgba(0, 0, 0, 0.32);
                 backdrop-filter: blur(0.6rem);
             }
         }
@@ -72,7 +72,7 @@
                 // height: 13.8rem;
 
                 border-radius: var(--button-action-size);
-                background: rgba(0, 0, 0, 0.32);
+                background-color: rgba(0, 0, 0, 0.32);
                 backdrop-filter: blur(0.6rem);
             }
         }
