--- a/src/common/components/MiniHowToPlay/Modal/DontShowAgain/style.module.scss
+++ b/src/common/components/MiniHowToPlay/Modal/DontShowAgain/style.module.scss
@@ -21,7 +21,7 @@
     height: 1.6rem;
     border: 0.1rem solid rgba(255, 255, 255, 0.12);
     border-radius: 0.5rem;
-    background: rgba(255, 255, 255, 0.06);
+    background-color: rgba(255, 255, 255, 0.06);
     overflow: hidden;
 }
 
