--- a/src/common/components/MiniHowToPlay/styles.module.scss
+++ b/src/common/components/MiniHowToPlay/styles.module.scss
@@ -5,7 +5,7 @@
     width: 100%;
     height: 100%;
     z-index: 50;
-    background: rgba(0, 0, 0, 0.7);
+    background-color: rgba(0, 0, 0, 0.7);
 
     display: flex;
     justify-content: center;
