--- a/src/common/menus/Items/Payout/PayoutContent/PayoutNote/styles.module.scss
+++ b/src/common/menus/Items/Payout/PayoutContent/PayoutNote/styles.module.scss
@@ -7,7 +7,7 @@
 
     border-radius: 0.5rem;
     border: 0.05rem solid rgba(255, 199, 0, 0.12);
-    background: rgba(255, 199, 0, 0.05);
+    background-color: rgba(255, 199, 0, 0.05);
 
     font-size: 1rem;
 
