--- a/src/common/menus/Items/Settings/StreamingQuality/styles.module.scss
+++ b/src/common/menus/Items/Settings/StreamingQuality/styles.module.scss
@@ -11,7 +11,7 @@
 
     border-radius: 0.5rem;
     border: 0.1rem solid rgba(94, 95, 115, 0.15);
-    background: #2c2d3f;
+    background-color: #2c2d3f;
 
     height: 3rem;
     display: flex;
