--- a/src/common/menus/MenuContentContainer/styles.module.scss
+++ b/src/common/menus/MenuContentContainer/styles.module.scss
@@ -8,7 +8,7 @@
 
     border-radius: 0.8rem;
     border: 0.1rem solid #343547;
-    background: #2c2d3f;
+    background-color: #2c2d3f;
 
     overflow: hidden;
 }
