--- a/src/game/components/HistoryResult/styles.module.scss
+++ b/src/game/components/HistoryResult/styles.module.scss
@@ -17,7 +17,7 @@
     justify-content: center;
     align-items: center;
 
-    background: rgba(0, 0, 0, 0.3);
+    background-color: rgba(0, 0, 0, 0.3);
     backdrop-filter: blur(0.4rem);
 
     &.thunder {
