--- a/src/game/components/Result24DTransaction/styles.module.scss
+++ b/src/game/components/Result24DTransaction/styles.module.scss
@@ -23,7 +23,7 @@
 
     border-radius: 11rem;
     border: 0.05rem solid #4ebbff;
-    background: #0189de;
+    background-color: #0189de;
 
     &-text {
         text-shadow: 0px 0.0352rem 0.0938rem rgba(0, 0, 0, 0.32);
