--- a/src/common/components/TopWinner/styles.module.scss
+++ b/src/common/components/TopWinner/styles.module.scss
@@ -43,6 +43,9 @@
     font-size: 0.8rem;
     font-weight: 700;
     text-transform: uppercase;
-    padding: 0 0.6rem;
+
+    padding-left: 0.6rem;
+    padding-right: 0.6rem;
+
     opacity: 0.8;
 }
