--- a/src/game/components/MainArea/styles.module.scss
+++ b/src/game/components/MainArea/styles.module.scss
@@ -23,7 +23,8 @@
 
     .panel-history,
     .panel-bet {
-        padding: 0 0.8rem;
+        padding-left: 0.8rem;
+        padding-right: 0.8rem;
     }
 }
 
@@ -38,7 +39,8 @@
 
     .panel-history,
     .panel-bet {
-        padding: 0 5.7rem 0;
+        padding-left: 5.7rem;
+        padding-right: 5.7rem;
     }
 }
 
