--- a/src/common/components/ChipDeck/_v2.scss
+++ b/src/common/components/ChipDeck/_v2.scss
@@ -18,7 +18,9 @@
                 flex-direction: column;
                 align-items: center;
                 gap: var(--gap);
-                padding: var(--offset) 0;
+
+                padding-top: var(--offset);
+                padding-bottom: var(--offset);
 
                 outline: 0.1rem solid rgba(255, 255, 255, 0.16);
             }
@@ -55,7 +57,9 @@
                 display: flex;
                 align-items: center;
                 gap: var(--gap);
-                padding: 0 var(--offset);
+
+                padding-left: var(--offset);
+                padding-right: var(--offset);
 
                 outline: 0.1rem solid rgba(255, 255, 255, 0.16);
             }
