--- a/src/common/layouts/v1/PanelTop/styles.module.scss
+++ b/src/common/layouts/v1/PanelTop/styles.module.scss
@@ -1,6 +1,8 @@
 .panel-top {
     height: 100%;
-    padding: 0 0.8rem;
+
+    padding-left: 0.8rem;
+    padding-right: 0.8rem;
 
     display: flex;
     flex-direction: column;
