--- a/src/common/menus/Items/HowToPlay/Components/styles.module.scss
+++ b/src/common/menus/Items/HowToPlay/Components/styles.module.scss
@@ -31,7 +31,8 @@
     margin-left: 1.2rem;
 
     li {
-        padding: 0.25rem 0;
+        padding-top: 0.25rem;
+        padding-bottom: 0.25rem;
     }
 
     p {
@@ -57,7 +58,9 @@
 
     .th,
     .td {
-        padding: 0 0.6rem;
+        padding-left: 0.6rem;
+        padding-right: 0.6rem;
+
         height: 2.5rem;
 
         &.bet-child {
