--- a/src/common/menus/Items/Payout/PayoutContent/TableMenuPayout/styles.module.scss
+++ b/src/common/menus/Items/Payout/PayoutContent/TableMenuPayout/styles.module.scss
@@ -21,7 +21,9 @@
 
     th,
     td {
-        padding: 0 0.6rem;
+        padding-left: 0.6rem;
+        padding-right: 0.6rem;
+
         height: 2.5rem;
 
         &.bet-child {
