--- a/src/common/menus/Items/Transactions/Card/BettingTable/styles.module.scss
+++ b/src/common/menus/Items/Transactions/Card/BettingTable/styles.module.scss
@@ -19,7 +19,10 @@
     th,
     td {
         border: 0.06rem solid #4c4d66;
-        padding: 0 1.2rem;
+
+        padding-left: 1.2rem;
+        padding-right: 1.2rem;
+
         white-space: nowrap;
         height: 2.5rem;
     }
