--- a/src/common/menus/Items/Transactions/ContentEmpty/styles.module.scss
+++ b/src/common/menus/Items/Transactions/ContentEmpty/styles.module.scss
@@ -2,7 +2,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 1rem 0;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
 }
 
 .message {
