--- a/src/common/components/MiniHowToPlay/Slider/styles.module.scss
+++ b/src/common/components/MiniHowToPlay/Slider/styles.module.scss
@@ -1,5 +1,6 @@
 .slideshow {
-    margin: 0 auto;
+    margin-left: auto;
+    margin-right: auto;
     overflow: hidden;
     max-width: var(--width-modal-mini-htp);
     height: 100%;
