--- a/src/common/components/MiniHowToPlay/Modal/ButtonDetails/styles.module.scss
+++ b/src/common/components/MiniHowToPlay/Modal/ButtonDetails/styles.module.scss
@@ -1,6 +1,6 @@
 .container {
     flex-shrink: 0;
-    margin-block-start: 0.8rem;
+    margin-top: 0.8rem;
     display: flex;
     justify-content: center;
 }
