--- a/src/common/components/MiniHowToPlay/Modal/DontShowAgain/style.module.scss
+++ b/src/common/components/MiniHowToPlay/Modal/DontShowAgain/style.module.scss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-block-start: 1rem;
+    margin-top: 1rem;
 }
 
 .input-bottom {
