--- a/src/common/components/MiniHowToPlay/Modal/Indicators/styles.module.scss
+++ b/src/common/components/MiniHowToPlay/Modal/Indicators/styles.module.scss
@@ -4,7 +4,7 @@
     justify-content: center;
     align-items: center;
     gap: 2rem;
-    margin-block-start: 0.8rem;
+    margin-top: 0.8rem;
 }
 
 .arrow {
