--- a/src/common/menus/Panel/styles.module.scss
+++ b/src/common/menus/Panel/styles.module.scss
@@ -65,7 +65,8 @@
             }
         }
 
-        &.layout-2 {
+        &.layout-2,
+        &.layout-3 {
             right: 0;
 
             box-shadow: -0.4rem 0 1.2rem rgba(0, 0, 0, 0.3);
