--- a/src/common/components/MiniHowToPlay/Modal/ButtonDetails/styles.module.scss
+++ b/src/common/components/MiniHowToPlay/Modal/ButtonDetails/styles.module.scss
@@ -12,15 +12,16 @@
     gap: 0.4rem;
 
     opacity: 0;
-    visibility: hidden;
+}
 
-    &.show {
-        animation: showAnimation 0.2s forwards;
-    }
+.show {
+    pointer-events: default;
+    animation: showAnimation 0.2s both;
+}
 
-    &.hide {
-        animation: hideAnimation 0.2s forwards;
-    }
+.hide {
+    pointer-events: none;
+    animation: hideAnimation 0.2s both;
 }
 
 .button svg {
@@ -38,26 +39,19 @@
 }
 
 @keyframes showAnimation {
-    0% {
-        visibility: hidden;
+    from {
         opacity: 0;
     }
-    1% {
-        visibility: visible;
-    }
-    100% {
+    to {
         opacity: 1;
-        visibility: visible;
     }
 }
 
 @keyframes hideAnimation {
     0% {
-        visibility: visible;
         opacity: 1;
     }
     100% {
         opacity: 0;
-        visibility: hidden;
     }
 }
