--- a/src/styles/base/_global.scss
+++ b/src/styles/base/_global.scss
@@ -31,12 +31,19 @@ html {
 /* Hide scrollbar for Chrome, Safari and Opera */
 .no-scrollbar::-webkit-scrollbar {
     display: none;
+    width: 0;
+}
+
+.no-scrollbar::-webkit-scrollbar-thumb {
+    background-color: transparent;
+}
+
+.no-scrollbar::-webkit-scrollbar-track {
+    background-color: transparent;
 }
 
 /* Hide scrollbar for IE, Edge and Firefox */
 .no-scrollbar {
     -ms-overflow-style: none;
-    /* IE and Edge */
     scrollbar-width: none;
-    /* Firefox */
 }
