--- a/src/styles/base/_animation.scss
+++ b/src/styles/base/_animation.scss
@@ -1,3 +1,17 @@
+@keyframes buttonWinBlink {
+    0% {
+        filter: brightness(1);
+    }
+
+    50% {
+        filter: brightness(1.5);
+    }
+
+    100% {
+        filter: brightness(1);
+    }
+}
+
 @keyframes fadeIn {
     0% {
         opacity: 0;
