--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -6,8 +6,8 @@
 
     // setting streaming scale in portrait
     --streaming-scale-portrait: 1.1;
-    --height-overlay-streaming-portrait: 4.8rem;
-    --width-overlay-streaming-landscape: 8rem;
+    --height-overlay-streaming-portrait: 3.5rem;
+    --width-overlay-streaming-landscape: 12rem;
     --height-overlay-streaming-landscape: 11rem;
 
     --streaming-background: #1c1303;
@@ -15,25 +15,16 @@
     // portrait, streaming ke bawah
     --streaming-color-1: linear-gradient(180deg, #854c07 0%, #533909 40.22%, #0e0901 100%);
     // portrait, blur di bawah streaming 1
-    --streaming-color-2: linear-gradient(
-        180deg,
-        rgba(133, 76, 7, 0) 0%,
-        rgba(133, 76, 7, 0.5) 100%
-    );
+    --streaming-color-2: linear-gradient(180deg, transparent 0%, #854c07 100%);
     // portrait, blur di bawah streaming 2
-    --streaming-color-3: linear-gradient(180deg, rgba(133, 76, 7, 0) 0%, #854c07 100%);
+    --streaming-color-3: linear-gradient(180deg, transparent 0%, #854c07 100%);
 
     // landscape, kiri
-    --streaming-color-4: linear-gradient(to right, #1c1303 0%, transparent 100%);
+    --streaming-color-4: linear-gradient(to right, #1c1303 0%, #1c1303 28%, transparent 100%);
     // landscape, kanan
-    --streaming-color-5: linear-gradient(to left, #1c1303 0%, transparent 100%);
+    --streaming-color-5: linear-gradient(to left, #1c1303 0%, #1c1303 28%, transparent 100%);
     // landscape, bawah
-    --streaming-color-6: linear-gradient(
-        180deg,
-        rgba(28, 19, 3, 0) 0%,
-        rgba(28, 19, 3, 0.83) 47.34%,
-        #0d0800 100%
-    );
+    --streaming-color-6: linear-gradient(0deg, #1c1303 0%, #1c1303 4rem, transparent 100%);
 
     --bg-footer: transparent; // rgba(2, 10, 20, 0.5);
 
