add letter box streaming

--- a/src/common/components/Streaming/styles.module.scss
+++ b/src/common/components/Streaming/styles.module.scss
@@ -58,7 +58,7 @@
         background-color: var(--streaming-background);
 
         .video-container {
-            height: 100%;
+            height: calc(100% - var(--height-footer));
         }
     }
 
