--- a/src/common/components/ButtonAction/styles.module.scss
+++ b/src/common/components/ButtonAction/styles.module.scss
@@ -27,7 +27,7 @@
 
     border-radius: 0.8rem;
     border: 0.1rem solid rgba(255, 255, 255, 0.24);
-    background-color: rgba(0, 0, 0, 0.32);
+    background-color: var(--overlay-1);
     transition: all 0.2s linear;
     backdrop-filter: blur(0.35rem);
 
