--- a/src/common/components/ChipDeck/_v2.scss
+++ b/src/common/components/ChipDeck/_v2.scss
@@ -37,7 +37,7 @@
                 );
 
                 border-radius: var(--button-action-size);
-                background-color: rgba(0, 0, 0, 0.32);
+                background-color: var(--overlay-1);
                 backdrop-filter: blur(0.6rem);
             }
         }
@@ -76,7 +76,7 @@
                 );
 
                 border-radius: var(--button-action-size);
-                background-color: rgba(0, 0, 0, 0.32);
+                background-color: var(--overlay-1);
                 backdrop-filter: blur(0.6rem);
             }
         }
