--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -24,7 +24,7 @@
     // landscape, kanan
     --streaming-color-5: linear-gradient(to left, #1c1303 0%, transparent 100%);
     // landscape, bawah
-    --streaming-color-6: linear-gradient(0deg, #0e0901 0%, #1c1303 4rem, transparent 100%);
+    --streaming-color-6: linear-gradient(0deg, #1c1303 0%, #1c1303 4rem, transparent 100%);
 
     --bg-footer: transparent; // rgba(2, 10, 20, 0.5);
 
@@ -58,9 +58,11 @@
 
     --button-action-size: 3.8rem;
 
-    --background-total-bet-bg-1: rgba(52, 54, 80, 0.1);
-    --background-total-bet-bg-2: rgba(52, 54, 80, 0.6); // rgba(52, 54, 80, 0.56);
+    --overlay-1: rgba(0, 0, 0, 0.3);
 
-    --border-total-bet-bg-1: transparent;
-    --border-total-bet-bg-2: rgba(133, 76, 7, 0.6);
+    --background-total-bet-bg-1: rgba(0, 0, 0, 0.3); // rgba(0, 0, 0, 0.1);
+    --background-total-bet-bg-2: rgba(0, 0, 0, 0.3); // rgba(52, 54, 80, 0.56);
+
+    --border-total-bet-bg-1: rgba(255, 255, 255, 0.2);
+    --border-total-bet-bg-2: rgba(255, 255, 255, 0.2);
 }
