--- a/src/game/components/TableBet/ButtonBet/styles.module.scss
+++ b/src/game/components/TableBet/ButtonBet/styles.module.scss
@@ -84,7 +84,7 @@
 
 :global(.desktop),
 :global(.mobile-landscape) {
-    .slot-chipx {
+    .slot-chip {
         width: calc(100cqh / 7 * 65 / 100);
         height: calc(100cqh / 7 * 65 / 100);
         font-size: calc(100cqh / 7 * 65 / 100);
