--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -60,9 +60,9 @@
 
     --overlay-1: rgba(0, 0, 0, 0.3);
 
-    --background-total-bet-bg-1: rgba(0, 0, 0, 0.3); // rgba(0, 0, 0, 0.1);
-    --background-total-bet-bg-2: rgba(0, 0, 0, 0.3); // rgba(52, 54, 80, 0.56);
+    --background-total-bet-bg-1: #343650; // rgba(0, 0, 0, 0.1);
+    --background-total-bet-bg-2: #343650; // rgba(52, 54, 80, 0.56);
 
-    --border-total-bet-bg-1: rgba(255, 255, 255, 0.2);
-    --border-total-bet-bg-2: rgba(255, 255, 255, 0.2);
+    --border-total-bet-bg-1: rgba(51, 53, 79, 0.7);
+    --border-total-bet-bg-2: rgba(51, 53, 79, 0.7);
 }
