--- a/src/styles/base/_animation.scss
+++ b/src/styles/base/_animation.scss
@@ -22,6 +22,18 @@
     }
 }
 
+@keyframes buttonWinBlinkOpacity {
+    0% {
+        filter: opacity(1);
+    }
+    50% {
+        filter: opacity(0.6);
+    }
+    100% {
+        filter: opacity(1);
+    }
+}
+
 @keyframes fadeIn {
     0% {
         opacity: 0;
