--- a/src/styles/base/_app.scss
+++ b/src/styles/base/_app.scss
@@ -30,12 +30,17 @@
     }
 }
 
-.button-win-blink {
-    animation: buttonWinBlinkBrightness 1s reverse ease-in-out;
+.button-win-blink-1 {
+    animation: buttonWinBlinkBrightness 0.75s reverse ease-in-out;
     animation-iteration-count: infinite;
 }
 
 .button-win-blink-2 {
-    animation: buttonWinBlinkSaturate 1s reverse ease-in-out;
+    animation: buttonWinBlinkSaturate 0.75s reverse ease-in-out;
+    animation-iteration-count: infinite;
+}
+
+.button-win-blink-3 {
+    animation: buttonWinBlinkOpacity 0.75s reverse ease-in-out;
     animation-iteration-count: infinite;
 }
