--- a/src/game/components/TableBet/ButtonBet/BetText/styles.module.scss
+++ b/src/game/components/TableBet/ButtonBet/BetText/styles.module.scss
@@ -1,4 +1,7 @@
 .container {
+    position: absolute;
+    inset: 0;
+
     display: flex;
     flex-direction: column;
     justify-content: center;
