--- a/src/game/components/TableBet/ButtonBet/styles.module.scss
+++ b/src/game/components/TableBet/ButtonBet/styles.module.scss
@@ -8,7 +8,7 @@
     justify-content: center;
     align-items: center;
     z-index: 1;
-    transition: all 1s linear;
+    transition: all 0.5 linear;
 }
 
 .lose {
