--- a/src/game/components/TableBet/styles.module.scss
+++ b/src/game/components/TableBet/styles.module.scss
@@ -90,6 +90,10 @@
             --scale: 0.5;
             --opacity: 0.5;
             --rotate-x: 46deg;
+
+            &.win-state {
+                --opacity: 1;
+            }
         }
     }
 }
