--- a/src/game/components/TableBetV2/ButtonBet/styles.module.scss
+++ b/src/game/components/TableBetV2/ButtonBet/styles.module.scss
@@ -209,7 +209,16 @@
 }
 
 
-
+.slot-card {
+    $percentChip: 70;
+    pointer-events: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    transform: translate(-50%, -50%);
+}
 
 .slot-chip {
     $percentChip: 70;
