--- a/src/game/components/TableBetV2/index.module.scss
+++ b/src/game/components/TableBetV2/index.module.scss
@@ -1,18 +1,29 @@
-
-
 .table-bet {
-    margin-left: 0.25rem;
-    margin-top: 1rem;
-    --width: 34rem;
     --center-half: 4.3rem;
+
+    margin-left: 0.25rem;
+    margin-right: 0.25rem;
     position: relative;
-    height: fit-content;
-    min-height: 17rem;
-    width: var(--width);
+
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     grid-template-rows: 1fr 10rem 1fr;
     gap: 0.2rem;
+}
+
+:global(.mobile-portrait) {
+    .table-bet {
+        height: calc(100% - 1.8rem);
+    }
+}
+
+:global(.desktop),
+:global(.mobile-landscape) {
+    .table-bet {
+        height: calc(100% - 0.8rem);
+        width: 100%;
+        max-width: 45rem;
+    }
 }
 
 .center {
@@ -32,8 +43,6 @@
     justify-content: space-between;
     padding: 0.2rem 0;
 }
-
-
 
 .stick {
     position: absolute;
@@ -60,12 +69,7 @@
     .long,
     .stick-top,
     .stick-bottom {
-        background: linear-gradient(
-            90deg,
-            rgb(110, 1, 21),
-            rgb(209, 8, 45),
-            rgb(110, 1, 21)
-        );
+        background: linear-gradient(90deg, rgb(110, 1, 21), rgb(209, 8, 45), rgb(110, 1, 21));
     }
 }
 
@@ -87,12 +91,7 @@
     .long,
     .stick-top,
     .stick-bottom {
-        background: linear-gradient(
-            90deg,
-            rgb(141, 79, 4),
-            rgb(230, 130, 8),
-            rgb(141, 79, 4)
-        );
+        background: linear-gradient(90deg, rgb(141, 79, 4), rgb(230, 130, 8), rgb(141, 79, 4));
     }
 }
 
@@ -116,12 +115,7 @@
 
 .stick-top::before,
 .stick-bottom::before {
-    background: linear-gradient(
-        90deg,
-        rgb(148, 106, 7),
-        #fbca53,
-        rgb(148, 106, 7)
-    );
+    background: linear-gradient(90deg, rgb(148, 106, 7), #fbca53, rgb(148, 106, 7));
 }
 
 .stick-top,
@@ -166,7 +160,8 @@
     position: absolute;
     left: 50%;
     translate: -50% 0;
-    box-shadow: inset 0.15rem 0.05rem 0.2rem rgb(148, 106, 7, 0.8),
+    box-shadow:
+        inset 0.15rem 0.05rem 0.2rem rgb(148, 106, 7, 0.8),
         inset 0.15rem 0.05rem 0.2rem rgb(0, 0, 0, 0.3),
         0 0 0.2rem rgba(0, 0, 0, 0.3),
         inset -0.1rem -0.1rem 0.2rem rgba(100, 100, 100, 0.3);
@@ -189,7 +184,8 @@
     left: 50%;
     translate: -50% 0;
     border-radius: 0.2rem 0.2rem 0.2rem 0.2rem;
-    box-shadow: inset 0.15rem 0.05rem 0.2rem rgb(148, 106, 7, 0.8),
+    box-shadow:
+        inset 0.15rem 0.05rem 0.2rem rgb(148, 106, 7, 0.8),
         0 0 0.2rem rgba(0, 0, 0, 0.3),
         inset -0.1rem -0.1rem 0.2rem rgba(255, 255, 255, 0.2);
 
@@ -201,7 +197,8 @@
         height: 0.15rem;
         width: 0.4rem;
         background: #fbca53;
-        box-shadow: inset 0.15rem 0.05rem 0.2rem rgb(148, 106, 7, 0.8),
+        box-shadow:
+            inset 0.15rem 0.05rem 0.2rem rgb(148, 106, 7, 0.8),
             inset 0.15rem 0.05rem 0.2rem rgb(0, 0, 0, 0.3),
             0 0 0.2rem rgba(0, 0, 0, 0.3),
             inset -0.1rem -0.1rem 0.2rem rgba(100, 100, 100, 0.3);
@@ -216,7 +213,8 @@
         width: 0.6rem;
 
         background: #fbca53;
-        box-shadow: inset 0.15rem 0.05rem 0.2rem rgb(148, 106, 7, 0.8),
+        box-shadow:
+            inset 0.15rem 0.05rem 0.2rem rgb(148, 106, 7, 0.8),
             0 0 0.2rem rgba(0, 0, 0, 0.3),
             inset -0.1rem -0.1rem 0.2rem rgba(255, 255, 255, 0.2);
     }
