--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -10,7 +10,7 @@
     --width-overlay-streaming-landscape: 12rem;
     --height-overlay-streaming-landscape: 10rem;
 
-    --streaming-background: #1c1303;
+    --streaming-background: #ff7401;
 
     // portrait, streaming ke bawah
     --streaming-color-1: linear-gradient(180deg, #ff7401 0%, #452204 40.22%, #0b0500 100%);
@@ -24,16 +24,11 @@
     --streaming-color-3: linear-gradient(180deg, rgba(255, 116, 0, 0) 75%, #ff7401 100%);
 
     // landscape, bawah
-    --streaming-color-4: linear-gradient(to right, rgba(14, 11, 8, 0.8) 0%, transparent 100%);
+    --streaming-color-4: linear-gradient(to right, #ff7401 0%, transparent 100%);
     // landscape, kiri
-    --streaming-color-5: linear-gradient(to left, rgba(14, 11, 8, 0.8) 0%, transparent 100%);
+    --streaming-color-5: linear-gradient(to left, #ff7401 0%, transparent 100%);
     // landscape, bawah
-    --streaming-color-6: linear-gradient(
-        180deg,
-        rgba(255, 116, 0, 0) 0%,
-        rgba(255, 116, 0, 1) 50%,
-        #4c2200 100%
-    );
+    --streaming-color-6: linear-gradient(0deg, #ff7401 0%, #ff7401 4rem, transparent 100%);
 
     --bg-footer: transparent; // rgba(2, 10, 20, 0.5);
 
