--- a/src/game/components/MainArea/styles.module.scss
+++ b/src/game/components/MainArea/styles.module.scss
@@ -23,8 +23,19 @@
         gap: 1.2rem;
     }
 
-    .panel-history,
+    // .panel-bet {
+    //     padding-top: 2.8rem;
+    // }
+
     .panel-bet {
+        min-height: 18rem;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-end;
+    }
+
+    .panel-bet,
+    .panel-history {
         padding-left: 0.8rem;
         padding-right: 0.8rem;
     }
@@ -33,7 +44,8 @@
 :global(.desktop),
 :global(.mobile-landscape) {
     .main-area {
-        padding-bottom: 0.8rem;
+        padding-bottom: 0.6rem;
+        padding-top: 1rem;
 
         flex-direction: column-reverse;
         gap: 2rem;
@@ -42,6 +54,14 @@
     .panel-history,
     .panel-bet {
         padding: 0 7.7rem 0;
+    }
+
+    .panel-bet {
+        flex: 1;
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: center;
     }
 }
 
