--- a/src/game/components/TableBetV2/index.module.scss
+++ b/src/game/components/TableBetV2/index.module.scss
@@ -245,3 +245,13 @@
         border-radius: 0.1rem 0.1rem 0.4rem 0.4rem;
     }
 }
+
+.slot-card {
+    pointer-events: none;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 100%;
+    height: 100%;
+    transform: translate(-50%, -50%);
+}
