--- a/src/game/components/ResultDTWildTransaction/styles.module.scss
+++ b/src/game/components/ResultDTWildTransaction/styles.module.scss
@@ -7,16 +7,16 @@
     display: flex;
     width: 100%;
     height: fit-content;
-    padding: 12px 12px;
+    padding: 1.2rem 1.2rem;
     box-sizing: border-box;
     flex-direction: column;
     justify-content: space-between;
     align-items: flex-start;
     border-radius: borderRadiusStr;
     border: none;
-    background: #1E1F2E;
+    background: #1e1f2e;
 
-    &>svg {
+    & > svg {
         width: 6.5rem;
         height: 6.5rem;
     }
@@ -46,7 +46,6 @@
     }
 }
 
-
 .triangle_container {
     position: relative;
     width: 200px;
@@ -55,7 +54,6 @@
     /* Adjust the height as needed */
     display: flex;
     justify-content: space-between;
-
 }
 
 .triangle_border {
@@ -67,7 +65,7 @@
     height: calc(100% - 2px);
     /* Adjust to match the border width */
     clip-path: polygon(0 100%, 100% 0, 100% 100%);
-    background-color: #4C4D66;
+    background-color: #4c4d66;
     /* Red border color */
     border-radius: 2px 2px 2px 2px;
 }
@@ -82,7 +80,7 @@
     border-radius: 2px 2px 2px 2px;
 
     clip-path: polygon(0 100%, 100% 0, 100% 100%);
-    background-image: linear-gradient(180deg, #42445F 1.58%, #2F3046 100%);
+    background-image: linear-gradient(180deg, #42445f 1.58%, #2f3046 100%);
 }
 
 .triangle_border.win {
@@ -90,8 +88,7 @@
 }
 
 .triangle.win {
-    background-image: linear-gradient(0deg, #01CBA7 -13.46%, rgba(30, 31, 46, 1) 99.77%);
-
+    background-image: linear-gradient(0deg, #01cba7 -13.46%, rgba(30, 31, 46, 1) 99.77%);
 }
 
 .triangle_border_1 {
@@ -103,9 +100,8 @@
     height: calc(100% - 2px);
     /* Adjust to match the border width */
     clip-path: polygon(0 0, 100% 0, 0 100%);
-    background-color: #4C4D66;
+    background-color: #4c4d66;
     border-radius: 2px 2px 2px 2px;
-
 }
 
 .triangle_1 {
@@ -117,7 +113,7 @@
     border-radius: 2px 2px 2px 2px;
     /* Adjust to match the border width */
     clip-path: polygon(0 0, 100% 0, 0 100%);
-    background-image: linear-gradient(180deg, #42445F 1.58%, #2F3046 100%);
+    background-image: linear-gradient(180deg, #42445f 1.58%, #2f3046 100%);
 }
 
 .triangle_border_1.win {
@@ -125,14 +121,12 @@
 }
 
 .triangle_1.win {
-    background-image: linear-gradient(0deg, #00A4EA 0.23%, rgba(30, 31, 46, 1) 122.17%);
-
+    background-image: linear-gradient(0deg, #00a4ea 0.23%, rgba(30, 31, 46, 1) 122.17%);
 }
 
 .triangle_1,
 .triangle {
     span {
-
         color: rgb(255, 255, 255);
         text-shadow: rgba(0, 0, 0, 0.2) 0px 1px 2px;
         font-family: Manrope;
