--- a/src/game/components/TableBet/table-bet-landscape.module.scss
+++ b/src/game/components/TableBet/table-bet-landscape.module.scss
@@ -7,7 +7,7 @@ $transformOpen: translate(0%, 0%) scale(0.8);
 $transformClose: translate(0%, 15%) scale(0.75, 0.75) perspective(1000px) rotateX(30deg);
 $transformCloseZoom: translate(-50%, calc(-50%)) scale(0.6);
 
-$childBetM23Width : calc(98.5%/2);
+$childBetM23Width: calc(98.5% / 2);
 
 .tableBet {
     width: calc(100% - 0.5rem);
@@ -23,7 +23,6 @@ $childBetM23Width : calc(98.5%/2);
         animation: openTable;
         animation-duration: $anim-duration;
         // bottom: -60%;
-
     }
 
     &.close {
@@ -48,10 +47,7 @@ $childBetM23Width : calc(98.5%/2);
     transform: translateY(1rem);
 }
 
-
-
 .container {
-
     width: 94%;
     // margin-left: 5%;
     display: flex;
@@ -68,8 +64,6 @@ $childBetM23Width : calc(98.5%/2);
     }
 }
 
-
-
 .buttonMore {
     float: right;
     margin: 1.5vh 0.5vh;
@@ -77,7 +71,7 @@ $childBetM23Width : calc(98.5%/2);
     width: 16vh;
     height: 5vh;
 
-    &>svg {
+    & > svg {
         position: absolute;
         width: 16vh;
         height: 5vh;
@@ -103,7 +97,6 @@ $childBetM23Width : calc(98.5%/2);
 
         margin-top: -1.5vh;
         // margin-right: 1.5vh;
-
     }
 
     // padding-left: 2.5vh;
@@ -141,10 +134,6 @@ $childBetM23Width : calc(98.5%/2);
     }
 }
 
-
-
-
-
 .slot-chip {
     $percentChip: 70;
 
@@ -157,7 +146,6 @@ $childBetM23Width : calc(98.5%/2);
     // margin-top: 3%;
 
     transform: translate(-50%, -50%) scale(0.7);
-
 }
 
 .mobile-portrait {
@@ -177,20 +165,17 @@ $childBetM23Width : calc(98.5%/2);
     }
 }
 
-
-
-
 .domain {
-    width: calc(99.5%/3);
-    margin: 0 calc(0.5%/3);
+    width: calc(99.5% / 3);
+    margin: 0 calc(0.5% / 3);
 
-    svg {}
+    // svg {
+    // }
 }
 
-
 .domainTie {
-    width: calc(99.5%/3);
-    margin: 0 calc(0.5%/3);
+    width: calc(99.5% / 3);
+    margin: 0 calc(0.5% / 3);
     text-align: center;
     // margin-top: -4%;
     margin-top: -4.5%;
@@ -198,23 +183,21 @@ $childBetM23Width : calc(98.5%/2);
 }
 
 .domainContent {
-    width: calc(99.5%/3);
-    margin: 0 calc(0.5%/3);
+    width: calc(99.5% / 3);
+    margin: 0 calc(0.5% / 3);
     position: absolute;
     padding-inline: 2rem 1rem;
     padding-block: 0.5rem;
     height: 55%;
 
-    &>div:nth-child(1) {
+    & > div:nth-child(1) {
         margin-top: 0 !important;
     }
 }
 
 .domainContent:nth-child(2) {
     padding-right: 1rem;
-
 }
-
 
 .betButtonLabel {
     font-size: 1rem;
@@ -258,7 +241,6 @@ $childBetM23Width : calc(98.5%/2);
         padding-right: 1rem;
         padding-left: 1rem;
         opacity: 1;
-
     }
 
     span {
@@ -267,8 +249,8 @@ $childBetM23Width : calc(98.5%/2);
 }
 
 .domainContentTie {
-    width: calc(99.5%/3);
-    margin: 0 calc(0.5%/3);
+    width: calc(99.5% / 3);
+    margin: 0 calc(0.5% / 3);
     position: absolute;
     padding-inline: 0.25rem;
     padding-block: 0.25rem;
@@ -280,18 +262,14 @@ $childBetM23Width : calc(98.5%/2);
     height: 3rem;
     padding-left: 1.5rem;
 
-    &>div {
+    & > div {
         margin-top: 10%;
         margin-left: 5%;
     }
 }
 
-
-
-
 .childContainer,
 .childContainerBottom {
-
     // background: linear-gradient(
     //     90deg,
     //     rgba(22, 77, 62, 0.5) 0%,
@@ -324,27 +302,22 @@ $childBetM23Width : calc(98.5%/2);
     margin-top: -4.5%;
     // width: 103%;
     padding-top: 0.2rem;
-
 }
 
 .childContainerBottom {
     margin-top: -3.5%;
     // width: 103%;
-
 }
-
 
 .child {
     width: $childBetM23Width;
-    margin: 0 calc(0.5%/4);
+    margin: 0 calc(0.5% / 4);
     display: flex;
 
-    &>svg {
+    & > svg {
         transform: scaleY(-1);
         // position: absolute;
     }
-
-
 }
 
 .child:nth-child(even) {
@@ -353,9 +326,8 @@ $childBetM23Width : calc(98.5%/2);
 
         flex-direction: row-reverse;
 
-
-        &>span {
-            &>div {
+        & > span {
+            & > div {
                 margin-left: -0.75rem;
             }
         }
@@ -364,8 +336,8 @@ $childBetM23Width : calc(98.5%/2);
 
 .child:nth-child(odd) {
     .childLabel {
-        &>span {
-            &>div {
+        & > span {
+            & > div {
                 margin-left: 1rem;
             }
         }
@@ -389,13 +361,12 @@ $childBetM23Width : calc(98.5%/2);
     letter-spacing: 0.09px;
     text-transform: uppercase;
 
-    &>span.text_lg {
+    & > span.text_lg {
         opacity: 1;
     }
 
-    &>span {
-
-        &>span {
+    & > span {
+        & > span {
             opacity: 0.75;
         }
 
@@ -403,8 +374,6 @@ $childBetM23Width : calc(98.5%/2);
         padding-right: 1.5rem;
         text-transform: uppercase;
     }
-
-
 }
 
 .cardContainerDragon {
